--- a/PK_FPS.uproject
+++ b/PK_FPS.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "PK_FPS",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
